<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@color/black"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/sistencia" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/banda_1"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_b1_n"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:buttonTint="@android:color/white"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/color_rb_negro"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b1_m"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/marron"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_marron"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b1_r"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_rojo"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b1_naranja"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/orangered"
                    android:buttonTint="@color/black"
                    android:text="@string/color_rb_naranja"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_b1_amarillo"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:buttonTint="@color/black"
                    android:text="@string/color_rb_amarillo"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_b1_verde"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_verde"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b1_azul"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_azul"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b1_violeta"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/violeta"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_violeta"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b1_gris"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_gris"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b1_blanco"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:buttonTint="@color/black"
                    android:text="@string/color_rb_blanco"
                    android:textColor="@color/black" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/banda_2"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_b2_n"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:buttonTint="@android:color/white"
                    android:checked="true"
                    android:text="@string/color_rb_negro"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b2_m"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/marron"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_marron"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b2_r"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_rojo"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b2_naranja"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/orangered"
                    android:buttonTint="@color/black"
                    android:text="@string/color_rb_naranja"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_b2_amarillo"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:buttonTint="@color/black"
                    android:text="@string/color_rb_amarillo"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_b2_verde"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_verde"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b2_azul"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_azul"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b2_violeta"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/violeta"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_violeta"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b2_gris"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_rb_gris"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b2_blanco"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:buttonTint="@color/black"
                    android:text="@string/color_rb_blanco"
                    android:textColor="@color/black" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/multiplicador"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_b3_n"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:buttonTint="@android:color/white"
                    android:checked="true"
                    android:text="@string/color_rb_multiplicador_N"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b3_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/marron"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_multiplicador_maron"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b3_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_multiplicador_rojo"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b3_naranja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orangered"
                    android:buttonTint="@color/black"
                    android:text="@string/color_multiplicador_naranja"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_b3_amarillo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:buttonTint="@color/black"
                    android:text="@string/color_multiplicador_amarillo"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_b3_verde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_multiplicador_verde"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b3_azul"
                    android:layout_width="214dp"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_multiplicador_azul"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b3_violeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/violeta"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_multiplicador_morado"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b3_gris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:buttonTint="@android:color/white"
                    android:text="@string/color_multiplicador_gris"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_b3_blanco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:buttonTint="@color/black"
                    android:text="@string/color_multiplicador_blanco"
                    android:textColor="@color/black" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="@string/tolerancia"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_tolerancia_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/marron"
                    android:text="@string/tolerancia_1"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_tolerancia_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="@string/tolerancia_2"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_tolerancia_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dorado"
                    android:checked="true"
                    android:text="@string/tolerancia_3"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_tolerancia_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/plateado"
                    android:text="@string/tolerancia_4"
                    android:textColor="@color/black" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_calcular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:background="@color/dorado"
                    android:text="@string/calcular"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_resultados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="25sp"
                    android:layout_marginEnd="15sp"
                    android:background="@color/white"
                    android:hint="@string/resultado"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>